fixed styling of shuffle button on mobile and tablet mode so it is centered

--- a/react-client/src/pages/PhotosPage/PhotosPage.scss
+++ b/react-client/src/pages/PhotosPage/PhotosPage.scss
@@ -67,7 +67,27 @@
   }
 
   &__shuffle-button {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
+                0 8px 15px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 28rem;
+    left: 33vw;
+    z-index: 1000000000;
+    scale: 1.2;
    @include buttons;
+   &:hover {
+    scale: 1.3;
+  }
+
+   @include tablet {
+    left: 42vw;
+    top: 29rem;
+    scale: 1.5;
+
+    &:hover {
+      scale: 1.6;
+    }
+   }
 }
 
 .photos-page__delete-button {
